# modelroom

./: .gitignore  README.md  run.bat  run.sh
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  schemas.py
backend/app/datasets/: analysis.py  samples.py  store.py
backend/app/models_builder/: compiler.py  shape_engine.py
backend/app/preprocessing/: pipeline.py  store.py
backend/app/routers/: datasets.py  models.py  preprocessing.py  projects.py  runs.py  system.py
backend/app/training/: job_manager.py  runs_store.py  train_entry.py
backend/tests/: conftest.py  test_compiler.py  test_config.py  test_dataset_analysis.py  test_dataset_store.py  test_datasets_api.py  test_health.py  test_job_manager.py  test_models.py  test_models_api.py  test_pipeline.py  test_preprocessing_api.py  test_preprocessing_store.py  test_projects.py  test_runs_api.py  test_runs_store.py  test_shape_engine.py  test_system_api.py  test_training_smoke.py
design_idea/precision_radiance/: DESIGN.md
design_idea/stitch_modelroom_interactive_ml_studio/dataset_preprocessing_light/: code.html
design_idea/stitch_modelroom_interactive_ml_studio/interactive_model_builder_light/: code.html
design_idea/stitch_modelroom_interactive_ml_studio/modelroom_landing_page/: code.html
design_idea/stitch_modelroom_interactive_ml_studio/projects_dashboard_light/: code.html
frontend/: package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
frontend/e2e/: smoke.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
(+40 files in other folders)
