[project]
name = "modelroom-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlmodel>=0.0.16",
    "httpx>=0.27",
    "pandas>=2.2",
    "numpy>=1.26",
    "python-multipart>=0.0.9",
    "scikit-learn>=1.4",
    "torch>=2.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
